--- a/.github/workflows/scheduled_run.yml
+++ b/.github/workflows/scheduled_run.yml
@@ -15,7 +15,7 @@ jobs:
             npm install -g newman-reporter-htmlextra
          - name: run postman collection and generate html report
            run: |
-            newman run Trello_Postman_Api_Testing.json -e Environment_Dmitriy_Trello.postman_environment.json 
+            newman run Dmitriy_Trello.postman_collection.json -e Environment_Dmitriy_Trello.postman_environment.json 
             --reporters cli,htmlextra --reporter-htmlextra-export htmlreport.html
          - name: attach the results 
            uses: actions/upload-artifact@v3
