--- a/.github/workflows/scheduled_run.yml
+++ b/.github/workflows/scheduled_run.yml
@@ -15,8 +15,8 @@ jobs:
             npm install -g newman-reporter-htmlextra
          - name: run postman collection and generate html report
            run: |
-            newman run Dmitriy_Trello.postman_collection.json -e Environment_Dmitriy_Trello.postman_environment.json 
-             --reporters cli,htmlextra --reporter-htmlextra-export report.html
+            'newman run Dmitriy_Trello.postman_collection.json -e Environment_Dmitriy_Trello.postman_environment.json 
+             --reporters cli,htmlextra --reporter-htmlextra-export report.html'
          - name: attach the results 
            uses: actions/upload-artifact@v3
            with:
